--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "serverless-p2p-chat",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Simple serverless, in-memory storage P2P chat client",
-  "main": "chat.js",
+  "main": "index.js",
   "scripts": {
     "lint": "standard",
     "test": " brittle test/**/*.test.js --coverage --bail"
@@ -12,15 +12,11 @@
   "dependencies": {
     "corestore": "^6.8.3",
     "hyperswarm": "^4.5.1",
-    "random-access-memory": "^6.2.0",
-    "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.7.2"
+    "random-access-memory": "^6.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.8",
     "brittle": "^3.3.0",
-    "standard": "^17.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "standard": "^17.1.0"
   }
 }
