--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "git+https://github.com/gvko/serverless-p2p-chat.git"
   },
   "scripts": {
-    "lint": "standard",
-    "test": " brittle test/**/*.test.js --coverage --bail"
+    "test": "echo \"Error: not implemented\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Galin Kostov (dev@galin.cc)",
   "license": "MIT",
